hotfix: disable the cronjob until migrating to Sarasa Gothic v1

--- a/.github/workflows/check-for-new-sarasa-gothic.yml
+++ b/.github/workflows/check-for-new-sarasa-gothic.yml
@@ -2,8 +2,9 @@ name: create tag if there's a new Sarasa Gothic version
 
 on:
   # runs every 3 hours
-  schedule:
-    - cron: '0 */3 * * *'
+  # FIXME: disable the cronjob until migrating to Sarasa Gothic v1
+  #schedule:
+  #  - cron: '0 */3 * * *'
   # allow manually trigger
   workflow_dispatch:
 
