migrating Sarasa Gothic v1, upgrade fontpatch to latest

--- a/.github/workflows/generate-fonts.yml
+++ b/.github/workflows/generate-fonts.yml
@@ -1,9 +1,10 @@
 name: generate fonts
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+#   push:
+#     tags:
+#       - 'v*.*.*'
+  workflow_dispatch
 
 concurrency: generate-fonts
 
