patch nerdfont with/without material

--- a/.github/workflows/generate-fonts-new.yml
+++ b/.github/workflows/generate-fonts-new.yml
@@ -1,7 +1,7 @@
-name: generate fonts 2
+name: generate fonts custom
 
 on:
-  # workflow_dispatch
+#   workflow_dispatch
   push:
     tags:
       - 'v*.*.*'
@@ -36,7 +36,7 @@ jobs:
       - run: echo version is ${{ env.LATEST_VERSION }}
 
       - name: Download latest version of Sarasa Gothic Unhinted from GitHub release page
-        uses: robinraju/release-downloader@v1.9
+        uses: robinraju/release-downloader@v1
         with:
           repository: 'be5invis/Sarasa-Gothic'
           tag: ${{ env.LATEST_TAG }}
@@ -50,7 +50,7 @@ jobs:
           path: 'Sarasa-TTF-Unhinted-${{ env.LATEST_VERSION }}.7z'
 
       - name: Download latest version of Sarasa Gothic Hinted from GitHub release page
-        uses: robinraju/release-downloader@v1.9
+        uses: robinraju/release-downloader@v1
         with:
           repository: 'be5invis/Sarasa-Gothic'
           tag: ${{ env.LATEST_TAG }}
@@ -64,7 +64,7 @@ jobs:
           path: 'Sarasa-TTF-${{ env.LATEST_VERSION }}.7z'
 
   patch1:
-    name: patch unhinted font
+    name: patch unhinted font without material icons
     runs-on: ubuntu-22.04
     needs: prepare
     strategy:
@@ -103,7 +103,7 @@ jobs:
           fontforge --version
       - name: Get Font Patcher
         id: get-fontpatcher
-        uses: robinraju/release-downloader@v1.9
+        uses: robinraju/release-downloader@v1
         with:
           repository: 'ryanoasis/nerd-fonts'
         #   tag: ${{ env.NERD_FONTS_VERSION }}
@@ -163,7 +163,7 @@ jobs:
           path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-NerdFont.ttf
 
   patch2:
-    name: patch hinted font
+    name: patch hinted font without material icons
     runs-on: ubuntu-22.04
     needs: prepare
     strategy:
@@ -202,7 +202,7 @@ jobs:
           fontforge --version
       - name: Get Font Patcher
         id: get-fontpatcher
-        uses: robinraju/release-downloader@v1.9
+        uses: robinraju/release-downloader@v1
         with:
           repository: 'ryanoasis/nerd-fonts'
         #   tag: ${{ env.NERD_FONTS_VERSION }}
@@ -261,7 +261,205 @@ jobs:
           name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-Hinted font
           path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-NerdFont.ttf
 
-  pack:
+  patch3:
+    name: patch unhinted font with material icons
+    runs-on: ubuntu-22.04
+    needs: prepare
+    strategy:
+      matrix:
+        styles: ['Fixed', 'FixedSlab', 'Term', 'TermSlab']
+        orthographies: ['SC']
+        variants:
+          [
+            'Regular',
+            'Italic',
+            'Bold',
+            'BoldItalic',
+            'SemiBold',
+            'SemiBoldItalic',
+            'Light',
+            'LightItalic',
+            'ExtraLight',
+            'ExtraLightItalic',
+          ]
+    env:
+      FILENAME: 'Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}'
+    #   NERD_FONTS_VERSION: v3.0.2
+    steps:
+      - uses: actions/checkout@v4
+
+      # credits: https://github.com/adam7/delugia-code/blob/411f2aecdef35d6bb92776d26bb5efe4ee799e0a/.github/workflows/ci.yaml#L77-L100
+      - name: Fetch FontForge
+        run: |
+          sudo apt install software-properties-common python3-fontforge fuse -y -q
+          curl -L "https://github.com/fontforge/fontforge/releases/download/20230101/FontForge-2023-01-01-a1dad3e-x86_64.AppImage" --output fontforge
+          chmod u+x fontforge
+          echo Try appimage
+          ./fontforge --version
+          echo `pwd` >> $GITHUB_PATH
+          echo Try appimage with path
+          fontforge --version
+      - name: Get Font Patcher
+        id: get-fontpatcher
+        uses: robinraju/release-downloader@v1
+        with:
+          repository: 'ryanoasis/nerd-fonts'
+        #   tag: ${{ env.NERD_FONTS_VERSION }}
+          latest: true
+          fileName: 'FontPatcher.zip'
+      - name: Open Font Patcher release
+        run: |
+          unzip FontPatcher.zip
+
+      - run: tree .
+      - name: Download sarasa-gothic-ttf.7z
+        uses: actions/download-artifact@v4
+        with:
+          name: Sarasa-TTF-Unhinted.7z
+      - run: ls -l
+      - run: 7z x *.7z
+      - run: ls -l
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - name: install configparser
+        run: pip install configparser
+      - run: ls -l
+      - run: mkdir -p "${PWD}/outputs"
+      - name: patch font
+        run: fontforge -script "${PWD}/font-patcher" --adjust-line-height --careful --fontawesome --fontawesomeext --material --octicons --powersymbols --powerline --powerlineextra --no-progressbars --quiet --removeligatures "${PWD}/${FILENAME}.ttf" --outputdir "${PWD}/outputs"
+      - run: ls -l
+      - run: ls -l "${PWD}/outputs"
+      - name: rename patched font files
+        run: |
+          cd "${PWD}/outputs"
+          mv *.ttf "../${FILENAME}-NerdFont.ttf"
+      - run: ls -l
+      - name: install fonttools
+        run: pip install fonttools
+      - name: correcting xAvgCharWidth to fix alignment issue
+        run: |
+          ttx -t "OS/2" "${FILENAME}.ttf"
+          ttx -t "OS/2" "${FILENAME}-NerdFont.ttf"
+          ls -l *.ttx
+          cat "${FILENAME}.ttx"
+          cat "${FILENAME}-NerdFont.ttx"
+          original_x_avg_char_width="$(grep xAvgCharWidth "${FILENAME}.ttx" | cut -d '"' -f 2)"
+          echo original xAvgCharWidth is $original_x_avg_char_width
+          sed -i "s/xAvgCharWidth value=\"[0-9]\+\"/xAvgCharWidth value=\"${original_x_avg_char_width}\"/g" "${FILENAME}-NerdFont.ttx"
+          cat "${FILENAME}-NerdFont.ttx"
+          mv "${FILENAME}-NerdFont.ttf" "${FILENAME}-NerdFont.original.ttf"
+          ttx -o "${FILENAME}-NerdFont.ttf" -m "${FILENAME}-NerdFont.original.ttf" "${FILENAME}-NerdFont.ttx"
+      - name: build hdmx table to fix alignment issue
+        run: python build-hdmx-for-sarasa.py "${FILENAME}-NerdFont.ttf"
+      - name: patch TTF font family name
+        run: python patch-ttf-name-for-sarasa-nerd.py "${FILENAME}-NerdFont.ttf" ${{ matrix.styles }} ${{ matrix.orthographies }} ${{ matrix.variants }} ${{ steps.get-fontpatcher.outputs.tag_name }} ${{ github.ref_name }}
+      - name: upload patched font
+        uses: actions/upload-artifact@v4
+        with:
+          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-Unhinted MD font
+          path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-NerdFont.ttf
+
+  patch4:
+    name: patch hinted font with material icons
+    runs-on: ubuntu-22.04
+    needs: prepare
+    strategy:
+      matrix:
+        styles: ['Fixed', 'FixedSlab', 'Term', 'TermSlab']
+        orthographies: ['SC']
+        variants:
+          [
+            'Regular',
+            'Italic',
+            'Bold',
+            'BoldItalic',
+            'SemiBold',
+            'SemiBoldItalic',
+            'Light',
+            'LightItalic',
+            'ExtraLight',
+            'ExtraLightItalic',
+          ]
+    env:
+      FILENAME: 'Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}'
+    #   NERD_FONTS_VERSION: v3.0.2
+    steps:
+      - uses: actions/checkout@v4
+
+      # credits: https://github.com/adam7/delugia-code/blob/411f2aecdef35d6bb92776d26bb5efe4ee799e0a/.github/workflows/ci.yaml#L77-L100
+      - name: Fetch FontForge
+        run: |
+          sudo apt install software-properties-common python3-fontforge fuse -y -q
+          curl -L "https://github.com/fontforge/fontforge/releases/download/20230101/FontForge-2023-01-01-a1dad3e-x86_64.AppImage" --output fontforge
+          chmod u+x fontforge
+          echo Try appimage
+          ./fontforge --version
+          echo `pwd` >> $GITHUB_PATH
+          echo Try appimage with path
+          fontforge --version
+      - name: Get Font Patcher
+        id: get-fontpatcher
+        uses: robinraju/release-downloader@v1
+        with:
+          repository: 'ryanoasis/nerd-fonts'
+        #   tag: ${{ env.NERD_FONTS_VERSION }}
+          latest: true
+          fileName: 'FontPatcher.zip'
+      - name: Open Font Patcher release
+        run: |
+          unzip FontPatcher.zip
+
+      - run: tree .
+      - name: Download sarasa-gothic-ttf.7z
+        uses: actions/download-artifact@v4
+        with:
+          name: Sarasa-TTF.7z
+      - run: ls -l
+      - run: 7z x *.7z
+      - run: ls -l
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - name: install configparser
+        run: pip install configparser
+      - run: ls -l
+      - run: mkdir -p "${PWD}/outputs"
+      - name: patch font
+        run: fontforge -script "${PWD}/font-patcher" --adjust-line-height --careful --fontawesome --fontawesomeext --material --octicons --powersymbols --powerline --powerlineextra --no-progressbars --quiet --removeligatures "${PWD}/${FILENAME}.ttf" --outputdir "${PWD}/outputs"
+      - run: ls -l
+      - run: ls -l "${PWD}/outputs"
+      - name: rename patched font files
+        run: |
+          cd "${PWD}/outputs"
+          mv *.ttf "../${FILENAME}-NerdFont.ttf"
+      - run: ls -l
+      - name: install fonttools
+        run: pip install fonttools
+      - name: correcting xAvgCharWidth to fix alignment issue
+        run: |
+          ttx -t "OS/2" "${FILENAME}.ttf"
+          ttx -t "OS/2" "${FILENAME}-NerdFont.ttf"
+          ls -l *.ttx
+          cat "${FILENAME}.ttx"
+          cat "${FILENAME}-NerdFont.ttx"
+          original_x_avg_char_width="$(grep xAvgCharWidth "${FILENAME}.ttx" | cut -d '"' -f 2)"
+          echo original xAvgCharWidth is $original_x_avg_char_width
+          sed -i "s/xAvgCharWidth value=\"[0-9]\+\"/xAvgCharWidth value=\"${original_x_avg_char_width}\"/g" "${FILENAME}-NerdFont.ttx"
+          cat "${FILENAME}-NerdFont.ttx"
+          mv "${FILENAME}-NerdFont.ttf" "${FILENAME}-NerdFont.original.ttf"
+          ttx -o "${FILENAME}-NerdFont.ttf" -m "${FILENAME}-NerdFont.original.ttf" "${FILENAME}-NerdFont.ttx"
+      - name: build hdmx table to fix alignment issue
+        run: python build-hdmx-for-sarasa.py "${FILENAME}-NerdFont.ttf"
+      - name: patch TTF font family name
+        run: python patch-ttf-name-for-sarasa-nerd.py "${FILENAME}-NerdFont.ttf" ${{ matrix.styles }} ${{ matrix.orthographies }} ${{ matrix.variants }} ${{ steps.get-fontpatcher.outputs.tag_name }} ${{ github.ref_name }}
+      - name: upload patched font
+        uses: actions/upload-artifact@v4
+        with:
+          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-Hinted MD font
+          path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-NerdFont.ttf
+
+  pack1:
     needs: [patch1, patch2]
     runs-on: ubuntu-22.04
     strategy:
@@ -273,34 +471,38 @@ jobs:
       # start of part generated by `generate-download-patched-fonts` script
       - uses: actions/download-artifact@v4
         with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-Regular-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-Italic-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-Bold-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-BoldItalic-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-SemiBold-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-SemiBoldItalic-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-Light-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-LightItalic-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-ExtraLight-${{ matrix.hints }} font
-      - uses: actions/download-artifact@v4
-        with:
-          name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-ExtraLightItalic-${{ matrix.hints }} font
+          pattern: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-${{ matrix.hints }} font
+          merge-multiple: true
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-Regular-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-Italic-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-Bold-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-BoldItalic-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-SemiBold-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-SemiBoldItalic-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-Light-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-LightItalic-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-ExtraLight-${{ matrix.hints }} font
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-ExtraLightItalic-${{ matrix.hints }} font
       # end of part generated by `generate-download-patched-fonts` script
 
       - run: ls -l
@@ -316,12 +518,42 @@ jobs:
           name: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-NerdFont.7z
           path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-NerdFont.7z
 
+  pack2:
+    needs: [patch3, patch4]
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        styles: ['Fixed', 'FixedSlab', 'Term', 'TermSlab']
+        orthographies: ['SC']
+        hints: ['Hinted', 'Unhinted']
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-${{ matrix.hints }} MD font
+          merge-multiple: true
+      - run: ls -l
+        #   - name: zip patched font files
+        #     run: zip -r Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-NerdFont.zip Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-NerdFont.ttf
+      - name: compress patched font files
+        run: 7z a Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-MD-NerdFont.7z Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-NerdFont.ttf
+      - run: ls -l
+      - name: upload zip
+        uses: actions/upload-artifact@v4
+        with:
+          name: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-MD-NerdFont.7z
+          path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-MD-NerdFont.7z
+
   release:
-    needs: pack
+    needs: [pack1, pack2]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
     steps:
       - run: ls -l
+
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: Sarasa*-NerdFont.7z
+          merge-multiple: true
 
       # start of part generated by `generate-download-patched-zips` script
     #   - uses: actions/download-artifact@v4
@@ -336,12 +568,12 @@ jobs:
     #   - uses: actions/download-artifact@v4
     #     with:
     #       name: SarasaFixedK-NerdFont.zip
-      - uses: actions/download-artifact@v4
-        with:
-          name: SarasaFixedSC-Hinted-NerdFont.7z
-      - uses: actions/download-artifact@v4
-        with:
-          name: SarasaFixedSC-Unhinted-NerdFont.7z
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: SarasaFixedSC-Hinted-NerdFont.7z
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: SarasaFixedSC-Unhinted-NerdFont.7z
     #   - uses: actions/download-artifact@v4
     #     with:
     #       name: SarasaFixedTC-NerdFont.zip
@@ -357,12 +589,12 @@ jobs:
     #   - uses: actions/download-artifact@v4
     #     with:
     #       name: SarasaFixedSlabK-NerdFont.zip
-      - uses: actions/download-artifact@v4
-        with:
-          name: SarasaFixedSlabSC-Hinted-NerdFont.7z
-      - uses: actions/download-artifact@v4
-        with:
-          name: SarasaFixedSlabSC-Unhinted-NerdFont.7z
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: SarasaFixedSlabSC-Hinted-NerdFont.7z
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: SarasaFixedSlabSC-Unhinted-NerdFont.7z
     #   - uses: actions/download-artifact@v4
     #     with:
     #       name: SarasaFixedSlabTC-NerdFont.zip
@@ -414,12 +646,12 @@ jobs:
     #   - uses: actions/download-artifact@v4
     #     with:
     #       name: SarasaTermK-NerdFont.zip
-      - uses: actions/download-artifact@v4
-        with:
-          name: SarasaTermSC-Hinted-NerdFont.7z
-      - uses: actions/download-artifact@v4
-        with:
-          name: SarasaTermSC-Unhinted-NerdFont.7z
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: SarasaTermSC-Hinted-NerdFont.7z
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: SarasaTermSC-Unhinted-NerdFont.7z
     #   - uses: actions/download-artifact@v4
     #     with:
     #       name: SarasaTermTC-NerdFont.zip
@@ -435,12 +667,12 @@ jobs:
     #   - uses: actions/download-artifact@v4
     #     with:
     #       name: SarasaTermSlabK-NerdFont.zip
-      - uses: actions/download-artifact@v4
-        with:
-          name: SarasaTermSlabSC-Hinted-NerdFont.7z
-      - uses: actions/download-artifact@v4
-        with:
-          name: SarasaTermSlabSC-Unhinted-NerdFont.7z
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: SarasaTermSlabSC-Hinted-NerdFont.7z
+    #   - uses: actions/download-artifact@v4
+    #     with:
+    #       name: SarasaTermSlabSC-Unhinted-NerdFont.7z
     #   - uses: actions/download-artifact@v4
     #     with:
     #       name: SarasaTermSlabTC-NerdFont.zip
@@ -484,7 +716,7 @@ jobs:
 
       - run: ls -l
       - name: release
-        uses: ncipollo/release-action@v1.13.0
+        uses: ncipollo/release-action@v1
         with:
           artifacts: '*.7z'
           token: ${{ secrets.WORKFLOW_PERSONAL_ACCESS_TOKEN }}
