update: patch hinted and unhinted fonts without material icons

--- a/.github/workflows/generate-fonts-new.yml
+++ b/.github/workflows/generate-fonts-new.yml
@@ -1,10 +1,10 @@
 name: generate fonts custom
 
 on:
-#   workflow_dispatch
-  push:
-    tags:
-      - 'v*.*.*'
+  workflow_dispatch
+  # push:
+  #  tags:
+  #    - 'v*.*.*'
 
 concurrency: generate-fonts
 
