thanks for laishulu/Sarasa-Term-SC-Nerd cherry-pick material icons and generate ttc from ttf

--- a/.github/workflows/generate-fonts.yml
+++ b/.github/workflows/generate-fonts.yml
@@ -3,7 +3,7 @@ name: generate fonts
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
   # workflow_dispatch
 
 concurrency: generate-fonts
@@ -38,54 +38,54 @@ jobs:
       - name: Download latest version of Sarasa Gothic Unhinted from GitHub release page
         uses: robinraju/release-downloader@v1
         with:
-          repository: 'be5invis/Sarasa-Gothic'
+          repository: "be5invis/Sarasa-Gothic"
           tag: ${{ env.LATEST_TAG }}
-          fileName: 'Sarasa-TTF-*-${{ env.LATEST_VERSION }}.7z'
+          fileName: "Sarasa-TTF-*-${{ env.LATEST_VERSION }}.7z"
       - run: ls -l
 
       - name: Upload Unhinted
         uses: actions/upload-artifact@v4
         with:
           name: Sarasa-TTF-Unhinted.7z
-          path: 'Sarasa-TTF-Unhinted-${{ env.LATEST_VERSION }}.7z'
+          path: "Sarasa-TTF-Unhinted-${{ env.LATEST_VERSION }}.7z"
 
       - name: Download latest version of Sarasa Gothic Hinted from GitHub release page
         uses: robinraju/release-downloader@v1
         with:
-          repository: 'be5invis/Sarasa-Gothic'
+          repository: "be5invis/Sarasa-Gothic"
           tag: ${{ env.LATEST_TAG }}
-          fileName: 'Sarasa-TTF-${{ env.LATEST_VERSION }}.7z'
+          fileName: "Sarasa-TTF-${{ env.LATEST_VERSION }}.7z"
       - run: ls -l
 
       - name: Upload Hinted
         uses: actions/upload-artifact@v4
         with:
           name: Sarasa-TTF.7z
-          path: 'Sarasa-TTF-${{ env.LATEST_VERSION }}.7z'
+          path: "Sarasa-TTF-${{ env.LATEST_VERSION }}.7z"
 
   patch1:
-    name: patch unhinted font without material icons
+    name: patch unhinted fonts
     runs-on: ubuntu-22.04
     needs: prepare
     strategy:
       matrix:
-        styles: ['Fixed', 'FixedSlab', 'Term', 'TermSlab']
-        orthographies: ['SC']
+        styles: ["Fixed", "FixedSlab", "Term", "TermSlab"]
+        orthographies: ["SC"]
         variants:
           [
-            'Regular',
-            'Italic',
-            'Bold',
-            'BoldItalic',
-            'SemiBold',
-            'SemiBoldItalic',
-            'Light',
-            'LightItalic',
-            'ExtraLight',
-            'ExtraLightItalic',
+            "Regular",
+            "Italic",
+            "Bold",
+            "BoldItalic",
+            "SemiBold",
+            "SemiBoldItalic",
+            "Light",
+            "LightItalic",
+            "ExtraLight",
+            "ExtraLightItalic",
           ]
     env:
-      FILENAME: 'Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}'
+      FILENAME: "Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}"
     #   NERD_FONTS_VERSION: v3.0.2
     steps:
       - uses: actions/checkout@v4
@@ -105,13 +105,15 @@ jobs:
         id: get-fontpatcher
         uses: robinraju/release-downloader@v1
         with:
-          repository: 'ryanoasis/nerd-fonts'
-        #   tag: ${{ env.NERD_FONTS_VERSION }}
+          repository: "ryanoasis/nerd-fonts"
+          #   tag: ${{ env.NERD_FONTS_VERSION }}
           latest: true
-          fileName: 'FontPatcher.zip'
+          fileName: "FontPatcher.zip"
       - name: Open Font Patcher release
         run: |
           unzip FontPatcher.zip
+          ls -l
+          patch font-patcher font-patcher.patch
 
       - run: tree .
       - name: Download sarasa-gothic-ttf.7z
@@ -123,13 +125,13 @@ jobs:
       - run: ls -l
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
       - name: install configparser
         run: pip install configparser
       - run: ls -l
       - run: mkdir -p "${PWD}/outputs"
       - name: patch font
-        run: fontforge -script "${PWD}/font-patcher" --adjust-line-height --careful --codicons --fontawesome --fontawesomeext --fontlogos --octicons --powersymbols --pomicons --powerline --powerlineextra --weather --no-progressbars --quiet --removeligatures "${PWD}/${FILENAME}.ttf" --outputdir "${PWD}/outputs"
+        run: fontforge -script "${PWD}/font-patcher" --adjust-line-height --careful --quiet --complete --removeligatures "${PWD}/${FILENAME}.ttf" --outputdir "${PWD}/outputs"
       - run: ls -l
       - run: ls -l "${PWD}/outputs"
       - name: rename patched font files
@@ -163,28 +165,28 @@ jobs:
           path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-NerdFont.ttf
 
   patch2:
-    name: patch hinted font without material icons
+    name: patch hinted fonts
     runs-on: ubuntu-22.04
     needs: prepare
     strategy:
       matrix:
-        styles: ['Fixed', 'FixedSlab', 'Term', 'TermSlab']
-        orthographies: ['SC']
+        styles: ["Fixed", "FixedSlab", "Term", "TermSlab"]
+        orthographies: ["SC"]
         variants:
           [
-            'Regular',
-            'Italic',
-            'Bold',
-            'BoldItalic',
-            'SemiBold',
-            'SemiBoldItalic',
-            'Light',
-            'LightItalic',
-            'ExtraLight',
-            'ExtraLightItalic',
+            "Regular",
+            "Italic",
+            "Bold",
+            "BoldItalic",
+            "SemiBold",
+            "SemiBoldItalic",
+            "Light",
+            "LightItalic",
+            "ExtraLight",
+            "ExtraLightItalic",
           ]
     env:
-      FILENAME: 'Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}'
+      FILENAME: "Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}"
     #   NERD_FONTS_VERSION: v3.0.2
     steps:
       - uses: actions/checkout@v4
@@ -204,15 +206,15 @@ jobs:
         id: get-fontpatcher
         uses: robinraju/release-downloader@v1
         with:
-          repository: 'ryanoasis/nerd-fonts'
-        #   tag: ${{ env.NERD_FONTS_VERSION }}
+          repository: "ryanoasis/nerd-fonts"
+          #   tag: ${{ env.NERD_FONTS_VERSION }}
           latest: true
-          fileName: 'FontPatcher.zip'
+          fileName: "FontPatcher.zip"
       - name: Open Font Patcher release
         run: |
           unzip FontPatcher.zip
+          patch font-patcher font-patcher.patch
 
-      - run: tree .
       - name: Download sarasa-gothic-ttf.7z
         uses: actions/download-artifact@v4
         with:
@@ -222,13 +224,13 @@ jobs:
       - run: ls -l
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
       - name: install configparser
         run: pip install configparser
       - run: ls -l
       - run: mkdir -p "${PWD}/outputs"
       - name: patch font
-        run: fontforge -script "${PWD}/font-patcher" --adjust-line-height --careful --codicons --fontawesome --fontawesomeext --fontlogos --octicons --powersymbols --pomicons --powerline --powerlineextra --weather --no-progressbars --quiet --removeligatures "${PWD}/${FILENAME}.ttf" --outputdir "${PWD}/outputs"
+        run: fontforge -script "${PWD}/font-patcher" --adjust-line-height --careful --complete --no-progressbars --quiet --removeligatures "${PWD}/${FILENAME}.ttf" --outputdir "${PWD}/outputs"
       - run: ls -l
       - run: ls -l "${PWD}/outputs"
       - name: rename patched font files
@@ -261,51 +263,52 @@ jobs:
           name: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-Hinted font
           path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.variants }}-NerdFont.ttf
 
-  pack1:
+  pack:
     needs: [patch1, patch2]
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        styles: ['Fixed', 'FixedSlab', 'Term', 'TermSlab']
-        orthographies: ['SC']
-        hints: ['Hinted', 'Unhinted']
+        styles: ["Fixed", "FixedSlab", "Term", "TermSlab"]
+        orthographies: ["SC"]
+        hints: ["Hinted", "Unhinted"]
     steps:
-      # start of part generated by `generate-download-patched-fonts` script
+      - run: ls -l
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           pattern: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-${{ matrix.hints }} font
           merge-multiple: true
-      # end of part generated by `generate-download-patched-fonts` script
+      - name: generating ttc from ttf
+        run: python otf2otc.py -o Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont.ttc Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-NerdFont.ttf
 
       - run: ls -l
       - name: compress patched font files
-        run: 7z a Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-NerdFont.7z Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-NerdFont.ttf
+        run: |
+          7z a Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-NerdFont.7z Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-NerdFont.ttf
+          7z a Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont.ttc.7z Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont.ttc
 
       - run: ls -l
-      - name: upload compressed file
+      - name: upload compressed font files
         uses: actions/upload-artifact@v4
         with:
           name: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-NerdFont.7z
-          path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-NerdFont.7z
+          path: Sarasa${{ matrix.styles }}${{ matrix.orthographies }}*.7z
 
   release:
-    needs: pack1
+    needs: pack
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
     steps:
       - run: ls -l
 
-      # start of part generated by `generate-download-patched-zips` script
       - uses: actions/download-artifact@v4
         with:
           pattern: Sarasa*-NerdFont.7z
           merge-multiple: true
 
-      # end of part generated by `generate-download-patched-zips` script
-
       - run: ls -l
       - name: release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: '*.7z'
+          artifacts: "*.7z"
           token: ${{ secrets.WORKFLOW_PERSONAL_ACCESS_TOKEN }}
